Fixed z-index.

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -22,7 +22,6 @@
     flex-direction: column;
     margin-bottom: 50px;
     position: relative;
-    z-index: -1;
     @media (min-width: $tablet) {
       width: 50%;
       margin-bottom: 80px;
